test changed credential import random

--- a/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
+++ b/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from art import logo"
+    "from art import logo\n",
+    "import random"
    ]
   },
   {
