--- a/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
+++ b/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f6571967-6f08-49f7-bacf-2eb579330840",
    "metadata": {},
    "outputs": [],
    "source": [
     "from art import logo\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "deck = [11, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 10, 10]"
    ]
   },
   {
@@ -28,10 +30,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "08dced5a-98a2-4431-899f-280a13aea80e",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d7ba4b9-15cb-45eb-bf1b-6cdfbdb97176",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def draw():\n",
+    "    return random.choice(deck)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,11 +50,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7ef6e089-b840-4cc4-b491-ced8bea02a29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bot_card = []\n",
+    "player_card = []\n",
+    "\n",
+    "for x in range (0,2):\n",
+    "    bot_card.append(draw())\n",
+    "    player_card.append(draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c430fcc8-779a-4f2a-a84f-87b956b3ae78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bot card: [9, 3]\n",
+      "your card: [11, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'bot card: {bot_card}')\n",
+    "print(f'your card: {player_card}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
