Blackjack in Notebook

--- a/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
+++ b/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9d7ba4b9-15cb-45eb-bf1b-6cdfbdb97176",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7ef6e089-b840-4cc4-b491-ced8bea02a29",
    "metadata": {},
    "outputs": [],
@@ -58,29 +58,9 @@
     "bot_card = []\n",
     "player_card = []\n",
     "\n",
-    "for x in range (0,2):\n",
+    "for x in range (2):\n",
     "    bot_card.append(draw())\n",
     "    player_card.append(draw())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c430fcc8-779a-4f2a-a84f-87b956b3ae78",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bot card: [9, 3]\n",
-      "your card: [11, 10]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'bot card: {bot_card}')\n",
-    "print(f'your card: {player_card}')"
    ]
   },
   {
@@ -96,11 +76,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "86a183b9-4dcb-4369-8c32-32cd187f21b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cardculation(cards):\n",
+    "    x = sum(cards)\n",
+    "    if x == 21:\n",
+    "        return 0\n",
+    "    elif x <21:\n",
+    "        return x\n",
+    "    elif x > 21 and len(cards) >=3 :\n",
+    "        deck[0] = 1\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9fd5e23d-694f-4e5f-90e0-dac1c6df9c50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stat(user):\n",
+    "    if user == \"player\":\n",
+    "        return f\"Your cards: {player_card}, your score is {cardculation(player_card)}\"\n",
+    "    elif user == \"bot\":\n",
+    "        return f\"Bot cards: {bot_card}, BOT score is {cardculation(bot_card)}\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,11 +123,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "36744d2e-86d7-4fe5-8eac-0be4d7f4185c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(logo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d7bff55e-a9bf-48c4-9ee2-dd69c689c623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot cards: [10, 4, 10], BOT score is 24\n",
+      "Your cards: [3, 11], your score is 14\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Type 'y' to draw next card, type 'n' to withdrawn\n",
+      " y\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'validate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [7], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m  \n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mvalidate\u001b[49m())\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'validate' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "blackjack = False\n",
+    "while not blackjack:\n",
+    "    player_score = cardculation(player_card)\n",
+    "    bot_score = cardculation(bot_card)\n",
+    "    if player_score == 0 or bot_score == 0:\n",
+    "        print(validate())\n",
+    "        blackjack = True\n",
+    "    elif player_score <21 or bot_score <18:\n",
+    "        if bot_score <18:\n",
+    "            bot_card.append(draw())\n",
+    "            print(stat(\"bot\"))\n",
+    "        elif player_score <21:\n",
+    "            print(stat(\"player\"))\n",
+    "            if input(\"Type 'y' to draw next card, type 'n' to withdrawn\\n\") == 'y':\n",
+    "                player_card.append(draw())\n",
+    "            else:\n",
+    "                print(validate())\n",
+    "                break  \n",
+    "    else:\n",
+    "        print(validate())\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,7 +204,33 @@
    "id": "c16eff13-6dea-42f7-977c-a34ace2487b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def validate():\n",
+    "    print(f\"\"\"BOT Cards are: {}\n",
+    "    \"\"\")\n",
+    "    if player_score == 0 or bot_score == 0:\n",
+    "        if player_score == 0 and bot_score ==0 :\n",
+    "            return f\"\\nBLACKJACK PARTY, both user obtain the blackjack\"\n",
+    "        elif player_score == 0 and bot_score !=0 :\n",
+    "            return f\"\\nIt's Your blackjack YOU WIN THIS GAME\"\n",
+    "        elif player_score != 0 and bot_score ==0 :\n",
+    "            return f\"\\nAI got Blackjack, YOU LOSE\"\n",
+    "        \n",
+    "    elif player_score > 21 or bot_score > 21:\n",
+    "        if player_score > 21 and bot_score >21:\n",
+    "            return f\"\\n'BUSTED PARTY' no winner on this turn\"\n",
+    "        elif player_score > 21:\n",
+    "            return f\"\\nYou're \\\"BUSTED\\\", YOU LOSE\"\n",
+    "        elif bot_score > 21:\n",
+    "            return f\"\\nAI got \\\"BUSTED\\\", YOU WIN\"\n",
+    "    else:\n",
+    "        if player_score > bot_score:\n",
+    "            return '\\n\"YOU WIN\" congratulations for beating the AI'\n",
+    "        elif player_score < bot_score:\n",
+    "            return '\\n\"YOU LOSE\" try again next time'\n",
+    "        else:\n",
+    "            return \"\\nuh-oh, it's a DRAW\"\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,7 +257,12 @@
    "id": "db920fc7-a2f5-4c1b-8c77-c0928df66c6b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while input(\"Type 'Y' if you want to play Blackjack, or type 'N' to skip? \").upper() == \"Y\":\n",
+    "    blackjack()\n",
+    "else:\n",
+    "    print(\"See you Next time\")"
+   ]
   }
  ],
  "metadata": {
