validate fx refactor & repositioning

--- a/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
+++ b/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
@@ -108,6 +108,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6868e1c-46e4-44dd-adf6-3e727be08e6c",
+   "metadata": {},
+   "source": [
+    "# Todo 5: Create function to comparing the score from both player and display the result\n",
+    "- win or lose condition and returning as output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f40379-46db-4ea9-8df4-59e8b79eb89e",
+   "metadata": {},
+   "source": [
+    "# Todo 6: Define END message\n",
+    "- calling the score comparator\n",
+    "- calling the last card function\n",
+    "- calling the last score function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c16eff13-6dea-42f7-977c-a34ace2487b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate():\n",
+    "    print(f\"\"\"\\n- | Final Result | - \n",
+    "BOT Cards: {bot_card}, bot score = {cardculation(bot_card)}\n",
+    "Your Cards: {player_card}, your score: {cardculation(player_card)}\"\"\")\n",
+    "\n",
+    "    if player_score == 0 or bot_score == 0:\n",
+    "        if player_score == 0 and bot_score ==0 :\n",
+    "            return \"\\nBLACKJACK PARTY, both user obtain the blackjack\"\n",
+    "        elif player_score == 0 and bot_score !=0 :\n",
+    "            return \"\\nIt's Your blackjack YOU WIN THIS GAME\"\n",
+    "        elif player_score != 0 and bot_score ==0 :\n",
+    "            return \"\\nAI got Blackjack, YOU LOSE\"\n",
+    "        \n",
+    "    elif player_score > 21 or bot_score > 21:\n",
+    "        if player_score > 21 and bot_score >21:\n",
+    "            return \"\\n'BUSTED PARTY' no winner on this turn\"\n",
+    "        elif player_score > 21:\n",
+    "            return \"\\nYou're \\\"BUSTED\\\", YOU LOSE\"\n",
+    "        elif bot_score > 21:\n",
+    "            return \"\\nAI got \\\"BUSTED\\\", YOU WIN\"\n",
+    "    else:\n",
+    "        if player_score > bot_score:\n",
+    "            return '\\n\"YOU WIN\" congratulations for beating the AI'\n",
+    "        elif player_score < bot_score:\n",
+    "            return '\\n\"YOU LOSE\" try again next time'\n",
+    "        else:\n",
+    "            return \"\\nuh-oh, it's a DRAW\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2112b7d-1b08-4b09-b9b0-07f3eebdce5b",
    "metadata": {},
    "source": [
@@ -123,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "36744d2e-86d7-4fe5-8eac-0be4d7f4185c",
    "metadata": {},
    "outputs": [],
@@ -133,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d7bff55e-a9bf-48c4-9ee2-dd69c689c623",
    "metadata": {},
    "outputs": [
@@ -141,8 +197,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot cards: [10, 4, 10], BOT score is 24\n",
-      "Your cards: [3, 11], your score is 14\n"
+      "Bot cards: [3, 10, 3], BOT score is 16\n",
+      "Bot cards: [3, 10, 3, 10], BOT score is 26\n",
+      "Your cards: [10, 10], your score is 20\n"
      ]
     },
     {
@@ -150,18 +207,19 @@
      "output_type": "stream",
      "text": [
       "Type 'y' to draw next card, type 'n' to withdrawn\n",
-      " y\n"
+      " n\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'validate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [7], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m  \n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mvalidate\u001b[49m())\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'validate' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "- | Final Result | - \n",
+      "BOT Cards: [3, 10, 3, 10], bot score = 26\n",
+      "Your Cards: [10, 10], your score: 20\n",
+      "\n",
+      "AI got \"BUSTED\", YOU WIN\n"
      ]
     }
    ],
@@ -176,7 +234,7 @@
     "    elif player_score <21 or bot_score <18:\n",
     "        if bot_score <18:\n",
     "            bot_card.append(draw())\n",
-    "            print(stat(\"bot\"))\n",
+    "            print(stat(\"bot\"))  # used for debugging only\n",
     "        elif player_score <21:\n",
     "            print(stat(\"player\"))\n",
     "            if input(\"Type 'y' to draw next card, type 'n' to withdrawn\\n\") == 'y':\n",
@@ -191,60 +249,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6868e1c-46e4-44dd-adf6-3e727be08e6c",
-   "metadata": {},
-   "source": [
-    "# Todo 5: Create function to comparing the score from both player and display the result\n",
-    "- win or lose condition and returning as output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c16eff13-6dea-42f7-977c-a34ace2487b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validate():\n",
-    "    print(f\"\"\"BOT Cards are: {}\n",
-    "    \"\"\")\n",
-    "    if player_score == 0 or bot_score == 0:\n",
-    "        if player_score == 0 and bot_score ==0 :\n",
-    "            return f\"\\nBLACKJACK PARTY, both user obtain the blackjack\"\n",
-    "        elif player_score == 0 and bot_score !=0 :\n",
-    "            return f\"\\nIt's Your blackjack YOU WIN THIS GAME\"\n",
-    "        elif player_score != 0 and bot_score ==0 :\n",
-    "            return f\"\\nAI got Blackjack, YOU LOSE\"\n",
-    "        \n",
-    "    elif player_score > 21 or bot_score > 21:\n",
-    "        if player_score > 21 and bot_score >21:\n",
-    "            return f\"\\n'BUSTED PARTY' no winner on this turn\"\n",
-    "        elif player_score > 21:\n",
-    "            return f\"\\nYou're \\\"BUSTED\\\", YOU LOSE\"\n",
-    "        elif bot_score > 21:\n",
-    "            return f\"\\nAI got \\\"BUSTED\\\", YOU WIN\"\n",
-    "    else:\n",
-    "        if player_score > bot_score:\n",
-    "            return '\\n\"YOU WIN\" congratulations for beating the AI'\n",
-    "        elif player_score < bot_score:\n",
-    "            return '\\n\"YOU LOSE\" try again next time'\n",
-    "        else:\n",
-    "            return \"\\nuh-oh, it's a DRAW\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4f40379-46db-4ea9-8df4-59e8b79eb89e",
-   "metadata": {},
-   "source": [
-    "# Todo 6: Define END message\n",
-    "- calling the score comparator\n",
-    "- calling the last card function\n",
-    "- calling the last score function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1cb88ae1-bdcf-4b35-988a-a7c7df9c6358",
    "metadata": {},
    "source": [
@@ -253,15 +257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "db920fc7-a2f5-4c1b-8c77-c0928df66c6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "while input(\"Type 'Y' if you want to play Blackjack, or type 'N' to skip? \").upper() == \"Y\":\n",
-    "    blackjack()\n",
-    "else:\n",
-    "    print(\"See you Next time\")"
+    "# while input(\"Type 'Y' if you want to play Blackjack, or type 'N' to skip? \").upper() == \"Y\":\n",
+    "#     blackjack()\n",
+    "# else:\n",
+    "#     print(\"See you Next time\")"
    ]
   }
  ],
