advance Import explanation

--- a/Udemy/100 Days Python Learning/D18 - Turtle & GUI/D18 - 01 Drawing Graphic using turtle.ipynb
+++ b/Udemy/100 Days Python Learning/D18 - Turtle & GUI/D18 - 01 Drawing Graphic using turtle.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from turtle import Turtle"
+    "from turtle import Turtle, Screen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a08c307d-9bff-4422-b368-b1633f83a001",
    "metadata": {},
    "outputs": [],
@@ -22,22 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c206d6be-7cfe-4b15-abc4-4f356a29da2d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Screen' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m screen \u001b[38;5;241m=\u001b[39m \u001b[43mScreen\u001b[49m()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Screen' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "screen = Screen()"
    ]
