--- a/Udemy/100 Days Python Learning/D24 - Files, directories and paths/D24 - 1 Read & write files using with keyword .ipynb
+++ b/Udemy/100 Days Python Learning/D24 - Files, directories and paths/D24 - 1 Read & write files using with keyword .ipynb
@@ -10,35 +10,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f6dbf465-9a94-447f-9846-67f58933963b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'test.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m content \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m     )\n\u001b[1;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'test.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi python, thie is the test files for the course\n"
      ]
     }
    ],
    "source": [
-    "file = open(\"test.txt\")\n",
-    "content = file.read()"
+    "file = open(\"D:\\\\Docs\\\\Python\\\\Jupyter\\\\Py-learn\\\\Udemy\\\\100 Days Python Learning\\\\D24 - Files, directories and paths\\\\test.txt\")\n",
+    "content = file.read()\n",
+    "print(content)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3d4e02-b078-4985-bd5a-f86feb9f2ae3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Method 1: menggunakan `file close()`\n",
+    "- line 1:\n",
+    "    - assign variable dengan script `open` (untuk jupyter harus fullpath T_T)\n",
+    "    - `variable = open(\"filenames\")`\n",
+    "- line 2:\n",
+    "    - assign variable baru untuk memberikan method setelah file diakses\n",
+    "    - `var2 = variable.read()`\n",
+    "- line 3: command untuk menampilkan file yg sudah dibaca sebelumnya\n",
+    "- line 4:\n",
+    "    - closing script\n",
+    "    - hal ini dimaksudkan untuk mengurangi beban memory dan misoperation ketika file diakses, tanpa di closing, semua update dalam file tidak akan tersimpan\n",
+    "    - `variable.close()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "452e097c-15e7-4c6f-bda6-c7be07de8fb5",
+   "execution_count": 5,
+   "id": "46cc0f6c-824f-4fe1-ba76-e41e5c316f0a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi python, thie is the test files for the course\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = \"D:\\\\Docs\\\\Python\\\\Jupyter\\\\Py-learn\\\\Udemy\\\\100 Days Python Learning\\\\D24 - Files, directories and paths\\\\test.txt\"\n",
+    "with open(file_path) as file:\n",
+    "    contents = file.read()\n",
+    "    print(contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4838fd6b-b81d-4df0-8761-c5b3915d0631",
+   "metadata": {},
+   "source": [
+    "## Method 2: menggunakan ***\"with\"*** keyword\n",
+    "- Most developer are using this method, karena tidak perlu menutup dengan `xxx.close()` ketika melakukan perubahan pada file yg dikerjakan\n",
+    "- format penggunaan:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "cb347f1d-df1f-4454-ad1b-2153635a3b69",
+   "metadata": {},
+   "source": [
+    "with open(\"file_name/file_path\") as \"var_1:\n",
+    "    var_2 = var_1.read()\n",
+    "    print(var_2)"
+   ]
   }
  ],
  "metadata": {
