pandas introduction with notebook

--- a/Udemy/100 Days Python Learning/D25 - CSV files & Pandas Library/D25 - 1 Accessing CSV files.ipynb
+++ b/Udemy/100 Days Python Learning/D25 - CSV files & Pandas Library/D25 - 1 Accessing CSV files.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "5663087f-6b54-40f4-a3b5-e78b57f58530",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Accessing the RAW csv files"
    ]
@@ -31,7 +33,9 @@
   {
    "cell_type": "markdown",
    "id": "690c1d3d-fa8d-44bf-8954-a28bef1f04cc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Accessing CSV files with CSV modules"
    ]
@@ -56,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x0000009A245D2380>\n"
+      "<_csv.reader object at 0x000000FC6DC82500>\n"
      ]
     }
    ],
@@ -79,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9d7fdbe5-c111-460d-824e-b7156605a1c2",
    "metadata": {},
    "outputs": [
@@ -88,13 +92,13 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "['12']\n",
-      "['14']\n",
-      "['15']\n",
-      "['14']\n",
-      "['21']\n",
-      "['22']\n",
-      "['24']\n"
+      "[12]\n",
+      "[14]\n",
+      "[15]\n",
+      "[14]\n",
+      "[21]\n",
+      "[22]\n",
+      "[24]\n"
      ]
     }
    ],
@@ -106,13 +110,13 @@
     "        temperatures = []\n",
     "        for temp in x:\n",
     "            if temp.isnumeric():\n",
-    "                temperatures.append(temp)\n",
+    "                temperatures.append(int(temp))\n",
     "        print(temperatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c5cfe8a1-6c11-476e-bb79-01a8e995f064",
    "metadata": {},
    "outputs": [
@@ -120,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['12', '14', '15', '14', '21', '22', '24']\n"
+      "[12, 14, 15, 14, 21, 22, 24]\n"
      ]
     }
    ],
@@ -131,18 +135,102 @@
     "    temperatures = []\n",
     "    for x in data:  \n",
     "        if x[1] != \"temp\":\n",
-    "            temperatures.append(x[1])\n",
+    "            temperatures.append(int(x[1]))\n",
     "    print(temperatures)\n",
     "        "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8f7e9fd-aeba-4430-b7b4-895fb58827aa",
+   "cell_type": "markdown",
+   "id": "4c49569c-e719-486a-aa3d-9fac17da5eb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Accessing CSV files with pandas module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d84349a8-2c6b-4921-9c46-414b64d76ddf",
+   "metadata": {},
+   "source": [
+    "- Displaying full csv contents with pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6615456c-c097-42ef-9010-be9c4a94f03e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         day  temp condition\n",
+      "0     Monday    12     Sunny\n",
+      "1    Tuesday    14      Rain\n",
+      "2  Wednesday    15      Rain\n",
+      "3   Thursday    14    Cloudy\n",
+      "4     Friday    21     Sunny\n",
+      "5   Saturday    22     Sunny\n",
+      "6     Sunday    24     Sunny\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "data = pandas.read_csv(\"weather_data.csv\")\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7830bba-673c-415e-a79b-9db3b2825a3f",
+   "metadata": {},
+   "source": [
+    "- Displaying full csv contents with pandas\n",
+    "We also can displaying specific values using pandas by calling the header row name after calling the variable yang diassign untuk memanggil module panda & nama file nya dengan proses seperti ini\n",
+    "```\n",
+    "variable = pandas.read_csv(\"file_names\")\n",
+    "print(variable[\"header_name\"])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a6bbfcd4-9f7a-467d-81b6-209efe628808",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    12\n",
+      "1    14\n",
+      "2    15\n",
+      "3    14\n",
+      "4    21\n",
+      "5    22\n",
+      "6    24\n",
+      "Name: temp, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[\"temp\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffa18d15-b75e-4c69-8b55-3aaac6104ae7",
+   "metadata": {},
+   "source": [
+    "## Pandas documentation source:\n",
+    "- Pandas [documentation](https://pandas.pydata.org/docs/)\n",
+    "- Pandas [API references](https://pandas.pydata.org/docs/reference/index.html)"
+   ]
   }
  ],
  "metadata": {
